Fixed some errors on percentage calculations on mobile and tablet

--- a/css/index.css
+++ b/css/index.css
@@ -285,7 +285,7 @@ footer {
 @media (max-width: 768px) {
     .container {
         width: 100%;
-        padding: 0 1.1%;
+        padding: 0 1.3%;
     }
     header {
         flex-flow: column-reverse;
@@ -349,12 +349,12 @@ footer {
         flex-flow: column wrap;
     }
     .main-content {
-        padding: 0 1.1%;
+        padding: 0 2.5%;
     }
     .main-content .text-content {
-        margin-top: 24px;
+        margin: 24px 0;
     }
     .contact {
-        padding: 0 1.1%;
+        padding: 0 2.5%;
     }
 }
